--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-    <%= yield %>
+      <% flash.each do |message_type, msg| %>
+       <div class="alert alert-<%= message_type %>"><%= msg %></div>
+      <% end %>
+      <%= yield %>
+      <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
